# browser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  make.sh  make_and_run.sh  run.sh
.github/: FUNDING.yml
.reuse/: dep5
LICENSES/: MIT.txt
include/: Constants.h  ResourceConstants.h  WebView.h  WebView.hpp  about_window.h  base_app.h  base_control.h  base_window.h  browser_app.h  browser_control.h  browser_document.h  browser_tab.h  browser_window.h  helpers.h  machine.h  oserr_exception.h  quickdraw_container.h  quickdraw_font.h  root_control.h  user_control.h
src/: CMakeLists.txt  WebView.cpp  about_window.cpp  base_app.cpp  base_control.cpp  base_window.cpp  browser_app.cpp  browser_control.cpp  browser_document.cpp  browser_tab.cpp  browser_window.cpp  config.h.in  hellolite.c  hellolite.r  helpers.cpp  home.html  machine.cpp  main.cpp  oserr_exception.cpp  quickdraw_container.cpp  quickdraw_font.cpp  root_control.cpp  user_control.cpp
src/cmake/: text_to_rez.cmake
